--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,13 @@
-spring.application.name=saga-orchestration
-server.port=8085
+# By default, Camel maps incoming requests to /camel/*. We override it to /services/ here:
+# camel.component.servlet.mapping.context-path=/transactions/*
+# LOGGING
+logging.level.org.apache.camel.component.servlet = DEBUG
+
+spring.application.name=saga-orchestration-service
+server.port=8087
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.instance.prefer-ip-address=true
+spring.main.allow-bean-definition-overriding=true
+eureka.instance.instance-id=${spring.application.name}:${random.value}
